Remove a number of dependencies:
org.apache.commons:commons-math3:3.6.1
org.ojalgo:ojalgo:41.0.0
com.google.guava:guava:29.0-jre
org.apache.commons:commons-lang3:3.4
software.amazon.awssdk:bom:2.15.48
software.amazon.awssdk:s3
org.postgresql:postgresql:42.2.16
org.sql2o:sql2o:1.6.0
com.google.auto.value:auto-value-annotations:1.7
com.google.auto.value:auto-value:1.7

Also remove database-related classes.